--- a/data/kaggle.ipynb
+++ b/data/kaggle.ipynb
@@ -1,8 +1,25 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63346576",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://github.com/hoanglmv/CAFA-6-Protein-Function-Prediction-Kaggle"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
