feat: Create initial notebooks for data processing, training, and evaluation
- Created viewer.ipynb to explore and visualize the data.
- Created process_data.ipynb to preprocess the data and extract features.
- Created model_training.ipynb to train a baseline multi-label classification model.
- Created evaluation.ipynb to evaluate the model's performance.
- Updated README.md with instructions.
- Updated .gitignore to exclude temporary files and plots.

--- a/data/kaggle.ipynb
+++ b/data/kaggle.ipynb
@@ -7,7 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "https://github.com/hoanglmv/CAFA-6-Protein-Function-Prediction-Kaggle"
+    "##   https://github.com/hoanglmv/CAFA-6-Protein-Function-Prediction-Kaggle\n",
+    "\n",
+    "##   Thui tải chay cho nhanh đi KKKK"
    ]
   }
  ],
