--- a/src/viewer.ipynb
+++ b/src/viewer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "unique-id-1",
    "metadata": {},
    "outputs": [],
@@ -13,16 +13,93 @@
   },
   {
    "cell_type": "markdown",
+   "id": "14dd33e8",
+   "metadata": {},
    "source": [
     "## Load and display IA.tsv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "unique-id-2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of IA.tsv: (40121, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GO:0000001</th>\n",
+       "      <th>0.0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GO:0000002</td>\n",
+       "      <td>2.849666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GO:0000011</td>\n",
+       "      <td>0.137504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GO:0000012</td>\n",
+       "      <td>6.038630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GO:0000017</td>\n",
+       "      <td>0.514573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GO:0000018</td>\n",
+       "      <td>1.879637</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   GO:0000001       0.0\n",
+       "0  GO:0000002  2.849666\n",
+       "1  GO:0000011  0.137504\n",
+       "2  GO:0000012  6.038630\n",
+       "3  GO:0000017  0.514573\n",
+       "4  GO:0000018  1.879637"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "ia_filepath = os.path.join('..', 'data', 'IA.tsv')\n",
     "try:\n",
@@ -37,16 +114,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "64e627f5",
+   "metadata": {},
    "source": [
     "## Load and display sample_submission.tsv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "unique-id-3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occurred while reading sample_submission.tsv: Error tokenizing data. C error: Expected 3 fields in line 3, saw 4\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "sample_submission_filepath = os.path.join('..', 'data', 'sample_submission.tsv')\n",
     "try:\n",
@@ -61,6 +149,8 @@
   },
   {
    "cell_type": "markdown",
+   "id": "722050e6",
+   "metadata": {},
    "source": [
     "## Explore Train and Test directories\n",
     "To explore files in `Train` and `Test` directories, you would typically list the files first and then load them.\n",
@@ -69,10 +159,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "unique-id-4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files in ..\\data\\Train:\n",
+      "- go-basic.obo\n",
+      "- train_sequences.fasta\n",
+      "- train_taxonomy.tsv\n",
+      "- train_terms.tsv\n",
+      "Files in ..\\data\\Test:\n",
+      "- testsuperset-taxon-list.tsv\n",
+      "- testsuperset.fasta\n"
+     ]
+    }
+   ],
    "source": [
     "# Example for listing files in the 'Train' directory\n",
     "train_dir = os.path.join('..', 'data', 'Train')\n",
@@ -80,16 +185,6 @@
     "    print(f\"Files in {train_dir}:\")\n",
     "    for filename in os.listdir(train_dir):\n",
     "        print(f\"- {filename}\")\n",
-    "    # Example for loading a specific file, e.g., 'train_data.tsv'\n",
-    "    # train_data_filepath = os.path.join(train_dir, 'train_data.tsv')\n",
-    "    # try:\n",
-    "    #     train_df = pd.read_csv(train_data_filepath, sep='\\t')\n",
-    "    #     print(f\"Shape of train_data.tsv: {train_df.shape}\")\n",
-    "    #     display(train_df.head())\n",
-    "    # except FileNotFoundError:\n",
-    "    #     print(f\"Error: {train_data_filepath} not found.\")\n",
-    "    # except Exception as e:\n",
-    "    #     print(f\"An error occurred while reading train_data.tsv: {e}\")\n",
     "else:\n",
     "    print(f\"Directory not found: {train_dir}\")\n",
     "\n",
@@ -99,18 +194,117 @@
     "    print(f\"Files in {test_dir}:\")\n",
     "    for filename in os.listdir(test_dir):\n",
     "        print(f\"- {filename}\")\n",
-    "    # Example for loading a specific file, e.g., 'test_data.tsv'\n",
-    "    # test_data_filepath = os.path.join(test_dir, 'test_data.tsv')\n",
-    "    # try:\n",
-    "    #     test_df = pd.read_csv(test_data_filepath, sep='\\t')\n",
-    "    #     print(f\"Shape of test_data.tsv: {test_df.shape}\")\n",
-    "    #     display(test_df.head())\n",
-    "    # except FileNotFoundError:\n",
-    "    #     print(f\"Error: {test_data_filepath} not found.\")\n",
-    "    # except Exception as e:\n",
-    "    #     print(f\"An error occurred while reading test_data.tsv: {e}\")\n",
     "else:\n",
     "    print(f\"Directory not found: {test_dir}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "new-cell-1",
+   "metadata": {},
+   "source": [
+    "## Analyze train_terms.tsv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "new-cell-2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_terms_path = os.path.join('..', 'data', 'Train', 'train_terms.tsv')\n",
+    "train_terms_df = pd.read_csv(train_terms_path, sep='\\t')\n",
+    "print(f\"Shape of train_terms.tsv: {train_terms_df.shape}\")\n",
+    "display(train_terms_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "new-cell-3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_proteins = train_terms_df['EntryID'].nunique()\n",
+    "num_go_terms = train_terms_df['term'].nunique()\n",
+    "print(f\"Number of unique proteins: {num_proteins}\")\n",
+    "print(f\"Number of unique GO terms: {num_go_terms}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "new-cell-4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "train_terms_df['term'].value_counts().nlargest(20).plot(kind='bar')\n",
+    "plt.title('Top 20 Most Frequent GO Terms')\n",
+    "plt.xlabel('GO Term')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "new-cell-5",
+   "metadata": {},
+   "source": [
+    "## Analyze train_taxonomy.tsv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+.
+   "id": "new-cell-6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_taxonomy_path = os.path.join('..', 'data', 'Train', 'train_taxonomy.tsv')\n",
+    "train_taxonomy_df = pd.read_csv(train_taxonomy_path, sep='\\t')\n",
+    "print(f\"Shape of train_taxonomy.tsv: {train_taxonomy_df.shape}\")\n",
+    "display(train_taxonomy_df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "new-cell-7",
+   "metadata": {},
+   "source": [
+    "## Analyze train_sequences.fasta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "new-cell-8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_fasta(file_path):\n",
+    "    sequences = {}\n",
+    "    current_protein = None\n",
+    "    with open(file_path, 'r') as f:\n",
+    "        for line in f:\n",
+    "            line = line.strip()\n",
+    "            if line.startswith('>'):\n",
+    "                current_protein = line[1:]\n",
+    "                sequences[current_protein] = ''\n",
+    "            elif current_protein:\n",
+    "                sequences[current_protein] += line\n",
+    "    return sequences\n",
+    "\n",
+    "train_sequences_path = os.path.join('..', 'data', 'Train', 'train_sequences.fasta')\n",
+    "train_sequences = parse_fasta(train_sequences_path)\n",
+    "\n",
+    "for i, (protein_id, sequence) in enumerate(train_sequences.items()):\n",
+    "    if i >= 5:\n",
+    "        break\n",
+    "    print(f'> {protein_id}\n{sequence[:60]}...')\n"
    ]
   }
  ],
@@ -121,7 +315,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   }
  },
