--- a/src/view_data.ipynb
+++ b/src/view_data.ipynb
@@ -2,7 +2,27 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "import os\n",
+        "from IPython.display import display"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data_dir = \"../data/Train\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -85,13 +105,26 @@
           },
           "metadata": {},
           "output_type": "display_data"
-        },
+        }
+      ],
+      "source": [
+        "# Load train_terms.tsv\n",
+        "print(\"Loading train_terms.tsv...\")\n",
+        "train_terms_path = os.path.join(data_dir, \"train_terms.tsv\")\n",
+        "train_terms_df = pd.read_csv(train_terms_path, sep=\"\\t\")\n",
+        "print(\"train_terms.tsv head:\")\n",
+        "display(train_terms_df.head())\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {},
+      "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\n",
-            "\n",
             "Loading train_sequences.fasta...\n",
             "train_sequences.fasta head:\n"
           ]
@@ -175,7 +208,47 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Load train_sequences.fasta into a DataFrame\n",
+        "print(\"Loading train_sequences.fasta...\")\n",
+        "train_sequences_path = os.path.join(data_dir, \"train_sequences.fasta\")\n",
+        "sequences = []\n",
+        "current_sequence_id = None\n",
+        "current_sequence = []\n",
+        "with open(train_sequences_path, 'r') as f:\n",
+        "    for line in f:\n",
+        "        line = line.strip()\n",
+        "        if line.startswith('>'):\n",
+        "            if current_sequence_id is not None:\n",
+        "                sequences.append({'sequence_id': current_sequence_id, 'sequence': ''.join(current_sequence)})\n",
+        "            current_sequence_id = line[1:]\n",
+        "            current_sequence = []\n",
+        "        else:\n",
+        "            current_sequence.append(line)\n",
+        "    if current_sequence_id is not None:\n",
+        "        sequences.append({'sequence_id': current_sequence_id, 'sequence': ''.join(current_sequence)})\n",
+        "\n",
+        "train_sequences_df = pd.DataFrame(sequences)\n",
+        "print(\"train_sequences.fasta head:\")\n",
+        "display(train_sequences_df.head())\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "Loading train_taxonomy.tsv...\n",
             "train_taxonomy.tsv head:\n"
           ]
@@ -252,7 +325,29 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Load train_taxonomy.tsv\n",
+        "print(\"Loading train_taxonomy.tsv...\")\n",
+        "train_taxonomy_path = os.path.join(data_dir, \"train_taxonomy.tsv\")\n",
+        "train_taxonomy_df = pd.read_csv(train_taxonomy_path, sep=\"\\t\")\n",
+        "print(\"train_taxonomy.tsv head:\")\n",
+        "display(train_taxonomy_df.head())\n",
+        "print(\"\\n\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "Loading go-basic.obo...\n",
             "go-basic.obo head:\n"
           ]
@@ -353,53 +448,6 @@
         }
       ],
       "source": [
-        "import pandas as pd\n",
-        "import os\n",
-        "from IPython.display import display\n",
-        "\n",
-        "data_dir = \"../data/Train\"\n",
-        "\n",
-        "# Load train_terms.tsv\n",
-        "print(\"Loading train_terms.tsv...\")\n",
-        "train_terms_path = os.path.join(data_dir, \"train_terms.tsv\")\n",
-        "train_terms_df = pd.read_csv(train_terms_path, sep=\"\\t\")\n",
-        "print(\"train_terms.tsv head:\")\n",
-        "display(train_terms_df.head())\n",
-        "print(\"\\n\")\n",
-        "\n",
-        "# Load train_sequences.fasta into a DataFrame\n",
-        "print(\"Loading train_sequences.fasta...\")\n",
-        "train_sequences_path = os.path.join(data_dir, \"train_sequences.fasta\")\n",
-        "sequences = []\n",
-        "current_sequence_id = None\n",
-        "current_sequence = []\n",
-        "\n",
-        "with open(train_sequences_path, 'r') as f:\n",
-        "    for line in f:\n",
-        "        line = line.strip()\n",
-        "        if line.startswith('>'):\n",
-        "            if current_sequence_id is not None:\n",
-        "                sequences.append({'sequence_id': current_sequence_id, 'sequence': ''.join(current_sequence)})\n",
-        "            current_sequence_id = line[1:]\n",
-        "            current_sequence = []\n",
-        "        else:\n",
-        "            current_sequence.append(line)\n",
-        "    if current_sequence_id is not None:\n",
-        "        sequences.append({'sequence_id': current_sequence_id, 'sequence': ''.join(current_sequence)})\n",
-        "\n",
-        "train_sequences_df = pd.DataFrame(sequences)\n",
-        "print(\"train_sequences.fasta head:\")\n",
-        "display(train_sequences_df.head())\n",
-        "print(\"\\n\")\n",
-        "\n",
-        "# Load train_taxonomy.tsv\n",
-        "print(\"Loading train_taxonomy.tsv...\")\n",
-        "train_taxonomy_path = os.path.join(data_dir, \"train_taxonomy.tsv\")\n",
-        "train_taxonomy_df = pd.read_csv(train_taxonomy_path, sep=\"\\t\")\n",
-        "print(\"train_taxonomy.tsv head:\")\n",
-        "display(train_taxonomy_df.head())\n",
-        "print(\"\\n\")\n",
-        "\n",
         "# Load go-basic.obo into a DataFrame\n",
         "print(\"Loading go-basic.obo...\")\n",
         "go_obo_path = os.path.join(data_dir, \"go-basic.obo\")\n",
