--- a/src/Kaggle.ipynb
+++ b/src/Kaggle.ipynb
@@ -1,13 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -16,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -29,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -125,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -434,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -533,7 +526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -691,7 +684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -720,21 +713,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Starting baseline training...\n",
-            "Train proteins with sequences: 82404\n",
-            "TF-IDF shape: (82404, 8190)\n",
-            "\n",
-            "Training aspect MF (F)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# GPU-friendly training: TF-IDF -> dense -> simple PyTorch MLP multi-label classifier\n",
         "import os, json, warnings, time\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -745,16 +725,25 @@
         "from sklearn.metrics import f1_score, average_precision_score\n",
         "import torch\n",
         "import torch.nn as nn\n",
-        "from torch.utils.data import TensorDataset, DataLoader\n",
-        "\n",
+        "from torch.utils.data import TensorDataset, DataLoader"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "warnings.filterwarnings('ignore')\n",
-        "print(\"PyTorch version:\", torch.__version__)\n",
-        "\n",
-        "# ---------- Config ----------\n",
-        "BASE_DIR = os.path.join('..','data')\n",
-        "TRAIN_DIR = os.path.join(BASE_DIR, 'Train')\n",
-        "TEST_DIR = os.path.join(BASE_DIR, 'Test')\n",
-        "\n",
+        "print(\"PyTorch version:\", torch.__version__)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# TF-IDF limits to avoid huge dense tensors on GPU\n",
         "TFIDF_MAX_FEATURES = 50000   # lower if memory is tight\n",
         "BATCH_SIZE = 256\n",
@@ -763,11 +752,25 @@
         "WEIGHT_DECAY = 1e-5\n",
         "DROPOUT = 0.3\n",
         "HIDDEN_DIM = 1024\n",
-        "RANDOM_STATE = 42\n",
-        "\n",
+        "RANDOM_STATE = 42\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "print(\"Using device:\", device)\n",
-        "\n",
+        "print(\"Using device:\", device)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# ---------- 0. Load precomputed resources (assume train_terms_df and train_sequences_df exist) ----------\n",
         "# If not present, load from files (adapt paths as needed)\n",
         "if 'train_terms_df' not in globals():\n",
@@ -781,8 +784,15 @@
         "all_entry_ids = set(train_terms_df['EntryID'].unique()).intersection(seq_map.keys())\n",
         "entries = sorted(all_entry_ids)\n",
         "seqs = [seq_map[e] for e in entries]\n",
-        "print(f\"Train proteins with sequences: {len(entries)}\")\n",
-        "\n",
+        "print(f\"Train proteins with sequences: {len(entries)}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# ---------- 1. TF-IDF features ----------\n",
         "vectorizer = TfidfVectorizer(analyzer='char', ngram_range=(3,3), min_df=2, max_features=TFIDF_MAX_FEATURES)\n",
         "X_sparse = vectorizer.fit_transform(seqs)\n",
@@ -791,7 +801,6 @@
         "# ---------- 2. Build multi-label Y (we'll train per-aspect; here show MF/CC/BP loop as before) ----------\n",
         "aspect_names = {'F': 'MF', 'P': 'BP', 'C': 'CC'}\n",
         "models_summary = {}\n",
-        "\n",
         "def eval_best_threshold(y_true, y_prob, thresholds=np.linspace(0.1,0.9,17)):\n",
         "    best_f1, best_t = 0.0, 0.5\n",
         "    for t in thresholds:\n",
@@ -799,8 +808,15 @@
         "        f1 = f1_score(y_true, y_pred, average='micro', zero_division=0)\n",
         "        if f1 > best_f1:\n",
         "            best_f1, best_t = f1, t\n",
-        "    return best_t, best_f1\n",
-        "\n",
+        "    return best_t, best_f1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# ---------- 3. loop aspects and train PyTorch MLP ----------\n",
         "for aspect_code, aspect_label in aspect_names.items():\n",
         "    print(\"\\n\" + \"=\"*60)\n",
@@ -931,13 +947,6 @@
         "\n",
         "print(\"\\nTraining summary:\")\n",
         "print(json.dumps(models_summary, indent=2))\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "\n"
       ]
     }
   ],
