--- a/src/process_data.ipynb
+++ b/src/process_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "469b0cd2",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
     "\n",
     "# --- CẤU HÌNH ĐƯỜNG DẪN ---\n",
     "# Lưu ý: Nên dùng dấu gạch chéo '/' hoặc r\"...\" để tránh lỗi đường dẫn trên Windows\n",
-    "BASE_DIR = r'E://LMVH//PROJECT//CAFA-6-Protein-Function-Prediction-Kaggle\\data\\Train'\n",
+    "BASE_DIR = r'E://LMVH//PROJECT//CAFA-6-Protein-Function-Prediction-Kaggle\\data//Train'\n",
     "TRAIN_FASTA_PATH = f'{BASE_DIR}/train_sequences.fasta'\n",
     "TRAIN_TERMS_PATH = f'{BASE_DIR}/train_terms.tsv'\n",
     "\n",
@@ -224,6 +224,25 @@
     "    print(f\"- GO Terms:    {sample['term'][:5]}... (Tổng {len(sample['term'])} terms)\")\n",
     "else:\n",
     "    print(\"Vẫn rỗng! Hãy kiểm tra lại ID.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "221c8530",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Đường dẫn lưu file (Cùng thư mục data)\n",
+    "SAVE_PATH = r'E:\\LMVH\\PROJECT\\CAFA-6-Protein-Function-Prediction-Kaggle\\data\\processed_data.pkl'\n",
+    "\n",
+    "print(f\"Đang lưu dữ liệu vào: {SAVE_PATH} ...\")\n",
+    "# Dùng pickle để lưu giữ nguyên định dạng List và các cột\n",
+    "df_final.to_pickle(SAVE_PATH)\n",
+    "\n",
+    "print(\"Đã lưu thành công! Lần sau bạn chỉ cần pd.read_pickle(SAVE_PATH) là xong.\")"
    ]
   }
  ],
