--- a/src/process_data.ipynb
+++ b/src/process_data.ipynb
@@ -14,7 +14,8 @@
     "\n",
     "# --- CẤU HÌNH ĐƯỜNG DẪN ---\n",
     "# Lưu ý: Nên dùng dấu gạch chéo '/' hoặc r\"...\" để tránh lỗi đường dẫn trên Windows\n",
-    "BASE_DIR = r'/home/myvh/hoang/CAFA-6-Protein-Function-Prediction-Kaggle/data/Train'\n",
+    "PROJ_DIR = os.path.abspath(os.path.join(os.path.dirname(__file__), '..'))\n",
+    "BASE_DIR = os.path.join(PROJ_DIR, 'data', 'Train')\n",
     "TRAIN_FASTA_PATH = f'{BASE_DIR}/train_sequences.fasta'\n",
     "TRAIN_TERMS_PATH = f'{BASE_DIR}/train_terms.tsv'\n",
     "\n",
