--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "94046d55",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
     "# ==========================================\n",
     "class Config:\n",
     "    # Đường dẫn\n",
-    "    BASE_DIR = r'/home/myvh/hoang/CAFA-6-Protein-Function-Prediction-Kaggle'\n",
+    "    BASE_DIR = os.path.abspath(os.path.join(os.path.dirname(__file__), '..'))\n",
     "    DATA_PATH = os.path.join(BASE_DIR, 'data', 'processed_data.pkl')\n",
     "    MODEL_DIR = os.path.join(BASE_DIR, 'models')\n",
     "    \n",
