--- a/src/ver1/process_data.ipynb
+++ b/src/ver1/process_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "469b0cd2",
    "metadata": {},
    "outputs": [
@@ -130,12 +130,12 @@
      "text": [
       "\n",
       "[SAMPLE DETAILS]\n",
-      "- EntryID:     A0A0C5B5G6\n",
+      "- EntryID:     O14910\n",
       "- TaxonomyID:  9606\n",
       "- PE:          1\n",
       "- Reviewed:    1\n",
-      "- Seq length:  16\n",
-      "- GO Terms:    ['GO:0001649', 'GO:0033687', 'GO:0005615', 'GO:0005634', 'GO:0005739'] (Total: 14)\n"
+      "- Seq length:  233\n",
+      "- GO Terms:    ['GO:0005515', 'GO:0065003', 'GO:0006887', 'GO:0005886', 'GO:0097016'] (Total: 6)\n"
      ]
     }
    ],
@@ -252,7 +252,7 @@
     "display(df_final.head())\n",
     "\n",
     "if len(df_final) > 0:\n",
-    "    sample = df_final.iloc[0]\n",
+    "    sample = df_final.iloc[100]\n",
     "    print(\"\\n[SAMPLE DETAILS]\")\n",
     "    print(f\"- EntryID:     {sample['EntryID']}\")\n",
     "    print(f\"- TaxonomyID:  {sample['TaxonomyID']}\")\n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "221c8530",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
     "PROJ_DIR = find_project_root(\"CAFA-6-Protein-Function-Prediction-Kaggle\")\n",
     "\n",
     "# ===== 2️⃣ Tạo đường dẫn file SAVE =====\n",
-    "SAVE_PATH = PROJ_DIR / \"data\" / \"processed_data.pkl\"\n",
+    "SAVE_PATH = PROJ_DIR / \"data\" / \"ver1.pkl\"\n",
     "\n",
     "print(f\"📁 Đang lưu dữ liệu vào: {SAVE_PATH}\")\n",
     "\n",
